--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
+    <form class="search-form" id="search-form">
+      <input type="text" id="search-text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+      <button class="btn-search" type="submit">Search</button>
+    </form>
+
+    <div class="gallery">
+      <!-- Карточки изображений -->
+    </div>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
